Use git over https, rather than git over ssh
It seems like in recent times (see [1]), github has slowly phased out the unauthenticated `git://`/ssh protocol, and thus `git@...` links only work if you are already logged into GitHub.

This commit updates the submodules (and the README) to use the https protocol so that cloning the repositories without logging into GitHub works.

Thanks to the artifact reviewers for pointing this out!

[1] https://github.blog/2021-09-01-improving-git-protocol-security-github/

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "rWasm"]
 	path = rWasm
-	url = git@github.com:secure-foundations/rWasm.git
+	url = https://github.com/secure-foundations/rWasm
 [submodule "vWasm"]
 	path = vWasm
-	url = git@github.com:secure-foundations/vWasm.git
+	url = https://github.com/secure-foundations/vWasm
 [submodule "wasm-semantics-fuzzer"]
 	path = wasm-semantics-fuzzer
-	url = git@github.com:secure-foundations/wasm-semantics-fuzzer.git
+	url = https://github.com/secure-foundations/wasm-semantics-fuzzer
